<resources>
    <string name="app_name">Mentorz</string>
    <string name="facebook_app_id">1730350050528117</string>
    <string name="gcm_id">AIzaSyASo4fV2ha3JhNjMZQVuwuJIHeaqAyVvhY</string>
    <string name="fb_login_protocol_scheme">fb1730350050528117</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="roboto_bold">Roboto_Bold.ttf</string>
    <string name="roboto_light">Roboto_Light.ttf</string>
    <string name="roboto_medium">Roboto_Medium.ttf</string>
    <string name="roboto_regular">Roboto_Regular.ttf</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="login_via">Login Via</string>
    <string name="facebook">Facebook</string>
    <string name="linkedin">Linkedin</string>
    <string name="or">Or</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="click_here">Click Here</string>
    <string name="new_here">New Here?</string>
    <string name="enter_your_email_id">Enter Your Email ID</string>
    <string name="submit">Submit</string>
    <string name="already_register">Already Registered?</string>
    <string name="sign_up_via">Sign Up Via</string>
    <string name="signup_via_email">Signup Via Email</string>
    <string name="name">Name</string>
    <string name="birthday_optional">Birthday (optional)</string>
    <string name="phone_optional">Phone (optional)</string>
    <string name="headline">Headline</string>
    <string name="please_enter_your_name">Please enter your name.</string>
    <string name="please_enter_email">Please enter email.</string>
    <string name="please_enter_a_valid_email">Please enter a valid email.</string>
    <string name="please_enter_a_password">Please enter a password.</string>
    <string name="password_too_short">Password too short. Minimum characters should be more than 6.</string>
    <string name="title">Title</string>
    <string name="descreption">Descreption</string>
    <string name="ok">Ok</string>
    <string name="almost_there">Almost there!</string>
    <string name="go_to_your_inbox">Go to Your Inbox and confirm your email. Then you are ready to go.</string>
    <string name="change_password">Change Password</string>
    <string name="verification_code">Verification Code</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="go_back">Go Back</string>
    <string name="please_enter_verification_code">Please enter verification code</string>
    <string name="verification_code_must_be_of">Verification code must be of length 10</string>
    <string name="please_enter_new_password">Please enter the new password</string>
    <string name="please_confirm_your_password">Please Confirm your Password</string>
    <string name="your_passwords_do_not_match">Your password do not match</string>
    <string name="message">Message</string>
    <string name="an_email_has_been_sent_to_your_email_id">An email has been sent to your email id</string>
    <string name="error">Error!</string>
    <string name="canceled_by_user">Canceled by User</string>
    <string name="be_the_expert">Be the expert</string>
    <string name="please_verify_your_email">Please verify your email or enter a valid username and password</string>
    <string name="stories">Stories</string>
    <string name="match">Match</string>
    <string name="messages">Messages</string>
    <string name="notification">Notification</string>
    <string name="me">Me</string>
    <string name="please_signup_then_you_can_login">Please sign up then you can login</string>
    <string name="you_are_already_register">You are already registred</string>
    <string name="either_verification_code_is_expired_or_not_valid">Either verification code is expired or not valid</string>
    <string name="be_a_mentor">Be a Mentor</string>
    <string name="request_mentor">Request Mentor</string>
    <string name="get_a_mentor">Get a Mentor</string>
    <string name="select_expertise">My expertise</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="requests">Requests</string>
    <string name="chats">Chats</string>
    <string name="no_request_available">No request available</string>
    <string name="find_a_mentor">Find a Mentor</string>
    <string name="get_started">Get Started</string>
    <string name="share_what_you_learn">Share what you khow, learn from who khow</string>
    <string name="find_a_mentor_based_on">Find a mentor based on your interests and values</string>
    <string name="be_a_mentor_to_others">Be a mentor to others, and learn with them</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="userName">Username</string>
    <string name="user_name">User name</string>
    <string name="enter_your_quick_description">Enter Your Quick Description</string>
    <string name="experience_details">Experience Details</string>
    <string name="title_or_occupation">Title or Occupation</string>
    <string name="organization_institute_or_school">Organization, institution or school</string>
    <string name="location">Location</string>
    <string name="years_of_experience">Years of experience</string>
    <string name="rate_15min">Rate (15 min)</string>
    <string name="free">Free</string>
    <string name="selfie_video">Selfie Video</string>
    <string name="done">Done</string>
    <string name="account_setting">Account Settings</string>
    <string name="Feedback">Feedback</string>
    <string name="logout">Logout</string>
    <string name="values">Values</string>
    <string name="interests">Interests</string>
    <string name="blocked_users">Blocked Users</string>
    <string name="mentor_not_available">No mentor available. Please update your filter to connect with a mentor</string>
    <string name="you_have_not_added_anyone_to_your_blocked_list">You haven\'t added anyone to your blocked list</string>
    <string name="skip">Skip</string>
    <string name="thank_you_for_letting_us_know">Thank you for letting us know a little bit about you!</string>
    <string name="getting_content_that_inspires">Getting content that inspires</string>
    <string name="finding_people_with">Finding people with similar values and interests</string>
    <string name="select_photo">Select Photo</string>
    <string name="select_from_gallery">Select from gallery</string>
    <string name="take_a_new_photo">Take a new photo</string>
    <string name="cancel">Cancel</string>
    <string name="unable_to_update_values">Unable to update values</string>
    <string name="send_mentor_request">Send request</string>
    <string name="tell_about">Tell about the opportunity to mentor you</string>
    <string name="followers">Followers</string>
    <string name="yr_of_experience">yr experience</string>
    <string name="my_expertise">My Expertise</string>
    <string name="select_atleast_one_values">Please select atleast 1 value</string>
    <string name="select_atleast_one_interest">Please select atleast 1 interest</string>
    <string name="select_atleast_one_expertise">Please select atleast 1 expertise</string>
    <string name="next">Next</string>
    <string name="pick_your_values">Pick your values</string>
    <string name="what_do_you_live_and_die_for">What do you live and die for?</string>
    <string name="pick_your_interests">Pick your interests</string>
    <string name="unable_to_connect">Unable to connect to server. Please check your internet connection or try again later.</string>
    <string name="please_enter_your_headline">Please enter your headline</string>
    <string name="please_enter_your_titile_or_occupation">Please enter your title or occupation</string>
    <string name="please_enter_the_orgination">Please enter the orgination, instution or school you work for.</string>
    <string name="please_enter_your_current_location">Please enter your current location.</string>
    <string name="please_enter_your_experience">Please enter your experience.</string>
    <string name="upload">Upload</string>
    <string name="what_inspires_you_to_learn_and_share">What inspires you to learn and shares?</string>
    <string name="mentor_expertise">Mentor expertise</string>
    <string name="something_went_wrong_please_try_later">Something went wrong. Please try later</string>
    <string name="please_select_expertise">Please select expertise</string>
    <string name="update">Update</string>
    <string name="updated_successfully">Update successfully</string>
    <string name="you_can_receive_membership_request">Congratulations! You can receive mentorship request</string>
    <string name="like">Like</string>
    <string name="likes">Likes</string>
    <string name="comments">Comments</string>
    <string name="views">Views</string>
    <string name="shares">Shares</string>
    <string name="please_enter_some_message">Please enter some message.</string>
    <string name="request_was_send_successfully_to">Request was sent successfully to</string>
    <string name="already_your_mentor">My mentor</string>
    <string name="request_sent">Request sent</string>
    <string name="request_already_sent">Request already sent</string>
    <string name="comment">Comment</string>
    <string name="view">View</string>
    <string name="share">Share</string>
    <string name="triple_dot">...</string>
    <string name="following">Following</string>
    <string name="mentors">Mentors</string>
    <string name="mentee">Mentee</string>
    <string name="follower">Follower</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="follow">Follow</string>
    <string name="inappropriate_content">Inappropriate Content</string>
    <string name="report_abuse">Report Abuse?</string>
    <string name="spam">Spam</string>
    <string name="post">Post</string>
    <string name="be_the_first_to_comment">Be the first to comment</string>
    <string name="reviews">Reviews</string>
    <string name="no_review_available">No review available</string>
    <string name="filters">Filters</string>
    <string name="would_you_recommend_mentorz_to_a_friend_or_colleague">Would you recommend Mentorz to a friend or colleague?</string>
    <string name="not_at_all_likely">Not at all Likely</string>
    <string name="extremely_likely">Extremely Likely</string>
    <string name="feedback_hint">Tell us what did you like and how can we make Mentorz better</string>
    <string name="send_feedback">SEND FEEDBACK</string>
    <string name="please_rate_app_first">Please rate app first</string>
    <string name="please_write_feedback">Please write feedback</string>
    <string name="feedback_submitted_successfully">Feedback submitted successfully</string>
    <string name="logout_title">Are you sure?</string>
    <string name="you_want_to_logout">You want to logout</string>
</resources>