<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:minWidth="@dimen/dp250"
    android:orientation="vertical">

    <com.mentorz.customviews.CustomTextView
        android:id="@+id/ctv_title"
        style="@style/TextStyleLarge.Black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginTop="@dimen/dp20"
        android:gravity="center"
        android:text="@string/title"
        android:textAlignment="center"
        app:fontName="@string/roboto_bold" />

    <com.mentorz.customviews.CustomTextView
        android:id="@+id/ctv_description"
        style="@style/TextStyleMedium.Black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp40"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginTop="@dimen/dp40"
        android:text="@string/descreption"
        android:textAlignment="center"
        app:fontName="@string/roboto_medium" />

    <com.mentorz.customviews.CustomTextView
        android:id="@+id/ctv_button"
        style="@style/CustomButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/ok"
        android:textAlignment="center"
        android:textAllCaps="true" />
</LinearLayout>