<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp40"
            android:src="@drawable/logo" />

        <com.mentorz.customviews.CustomTextView
            style="@style/TextStyleMedium.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/dp15"
            android:layout_marginTop="@dimen/dp100"
            android:text="@string/change_password"
            app:fontName="@string/roboto_regular" />

        <com.mentorz.customviews.CustomEditText
            android:id="@+id/et_verification_code"
            style="@style/TextStyleMedium.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp10"
            android:layout_marginLeft="@dimen/dp20"
            android:layout_marginRight="@dimen/dp20"
            android:background="@drawable/rounded_corner_edittext"
            android:hint="@string/verification_code"
            android:inputType="textEmailAddress"
            app:fontName="@string/roboto_regular" />

        <com.mentorz.customviews.CustomEditText
            android:id="@+id/et_new_password"
            style="@style/TextStyleMedium.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp10"
            android:layout_marginLeft="@dimen/dp20"
            android:layout_marginRight="@dimen/dp20"
            android:background="@drawable/rounded_corner_edittext"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            app:fontName="@string/roboto_regular" />

        <com.mentorz.customviews.CustomEditText
            android:id="@+id/et_confirm_password"
            style="@style/TextStyleMedium.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp10"
            android:layout_marginLeft="@dimen/dp20"
            android:layout_marginRight="@dimen/dp20"
            android:background="@drawable/rounded_corner_edittext"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            app:fontName="@string/roboto_regular" />

        <com.mentorz.customviews.CustomTextView
            android:id="@+id/ctv_login"
            style="@style/CustomButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp25"
            android:layout_marginLeft="@dimen/dp20"
            android:layout_marginRight="@dimen/dp20"
            android:background="@drawable/ripple_button"
            android:gravity="center"
            android:text="@string/login"
            app:fontName="@string/roboto_regular" />

        <com.mentorz.customviews.CustomTextView
            android:id="@+id/ctv_go_back"
            style="@style/TextStyleSmall.ColorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/go_back"
            app:fontName="@string/roboto_regular" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</FrameLayout>